# retailing

./: .env_sample  .gitignore  README.md  groups.json  pyproject.toml
config/: settings.py  urls.py
retailing/: admin.py  apps.py  models.py  paginations.py  serialaizer.py  tests.py  urls.py  views.py
retailing/management/commands/: fill_countries.py
users/: models.py  permissions.py  serializer.py  tests.py  views.py
users/management/commands/: csu.py  fill_countries.py
